--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -11,6 +11,12 @@ $border-color: #dbe0e6;
 
     transition: all 0.25s ease-in-out;
 
+    &:focus {
+        -webkit-box-shadow: 0px 0px 19px -3px rgba(0, 0, 0, 0.29);
+        box-shadow: 0px 0px 19px -3px rgba(0, 0, 0, 0.29);
+        transform: scaleX(1.01);
+    }
+
     &__field {
         margin-bottom: 20px;
 
